# omics

./: .gitignore  Cargo.toml  DESIGN.md  README.md  RELEASE.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: CI.yml  bench.yml
.superpowers/sdd/: task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md
omics/: CHANGELOG.md  Cargo.toml
omics-alignment/: CHANGELOG.md  Cargo.toml
omics-alignment/benches/: algorithms.rs
omics-alignment/src/: algorithm.rs  alignment.rs  block.rs  cigar.rs  lib.rs  needleman_wunsch.rs  score.rs  sequence.rs  smith_waterman.rs  step.rs
omics-alignment/src/algorithm/: engine.rs  simd.rs
omics-alignment/src/algorithm/simd/: aarch64.rs  wavefront.rs  x86_64.rs
omics-alignment/tests/: algorithm.rs
omics-coordinate/: CHANGELOG.md  Cargo.toml
omics-coordinate/benches/: contigs.rs  coordinates.rs  intervals.rs  positions.rs
omics-coordinate/examples/: create_coordinate.rs  move_forward.rs
omics-coordinate/src/: contig.rs  coordinate.rs  interval.rs  lib.rs  math.rs  one.rs  position.rs  span.rs  strand.rs  system.rs  zero.rs
omics-coordinate/src/contig/: corpus.rs
omics-coordinate/src/coordinate/: base.rs  interbase.rs
omics-coordinate/src/interval/: base.rs  interbase.rs  one.rs  zero.rs
omics-coordinate/src/position/: base.rs  interbase.rs  one.rs  value.rs  zero.rs
omics-coordinate/src/position/base/: addition.rs  subtraction.rs
omics-coordinate/src/position/interbase/: addition.rs  subtraction.rs
omics-coordinate/src/position/one/: addition.rs  subtraction.rs
omics-coordinate/src/position/zero/: addition.rs  subtraction.rs
omics-coordinate/src/span/: base.rs  interbase.rs
omics-coordinate/src/system/: base.rs  corpus.rs  interbase.rs  one.rs  zero.rs
omics-coordinate/tests/: spans.rs
omics-core/: CHANGELOG.md  Cargo.toml
omics-core/src/: lib.rs
omics-molecule/: CHANGELOG.md  Cargo.toml
omics-molecule/src/: compound.rs  lib.rs  polymer.rs  sequence.rs
omics-molecule/src/compound/: amino_acid.rs  kind.rs  nucleotide.rs
omics-molecule/src/compound/nucleotide/: relation.rs
omics-molecule/src/compound/nucleotide/relation/: substitution.rs
omics-molecule/src/compound/nucleotide/relation/substitution/: kind.rs
omics-molecule/src/polymer/: dna.rs  protein.rs  rna.rs
omics-molecule/src/polymer/dna/: nucleotide.rs
omics-molecule/src/polymer/protein/: amino_acid.rs
omics-molecule/src/polymer/rna/: nucleotide.rs
omics-variation/: CHANGELOG.md  Cargo.toml
omics-variation/benches/: copy_number.rs  structural.rs  variants.rs
omics-variation/examples/: describe.rs
omics-variation/src/: copy_number.rs  lib.rs  small.rs  snv.rs  structural.rs  variant.rs
omics-variation/src/small/: deletion.rs  delins.rs  insertion.rs  mnv.rs  snv.rs
omics-variation/src/structural/: adjacency.rs  breakend.rs  orientation.rs
omics-variation/src/variant/: deletion.rs  delins.rs  insertion.rs  mnv.rs  mod.rs  snv.rs
omics-variation/tests/: copy_number.rs  structural.rs
omics/src/: lib.rs
profile/: Cargo.toml
profile/src/: contig.rs  main.rs
profile/src/contig/: alloc.rs
