[package]
name = "omics-alignment"
version = "0.1.0"
description = "Foundational representations of sequence alignments in the Rust omics ecosystem"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
omics-coordinate = { path = "../omics-coordinate", version = "0.4.0" }
thiserror.workspace = true

[features]
default = []
position-u64 = ["omics-coordinate/position-u64"]

[dev-dependencies]
criterion.workspace = true
omics-molecule = { path = "../omics-molecule", version = "0.2.0" }

[lints]
workspace = true

# Benchmarks

[[bench]]
name = "algorithms"
harness = false
