[package]
name = "omics-variation"
version = "0.2.0"
description = "Foundational representations of variation in the Rust omics ecosystem"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
omics-coordinate = { path = "../omics-coordinate", version = "0.2.0" }
omics-core = { path = "../omics-core", version = "0.1.0" }
omics-molecule = { path = "../omics-molecule", version = "0.1.0" }

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
