[package]
name = "omics"
description = "Foundations for omics analysis using Rust"
version = "0.2.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
omics-core = { path = "../omics-core", version = "0.1.0", optional = true }
omics-coordinate = { path = "../omics-coordinate", version = "0.2.0", optional = true }
omics-molecule = { path = "../omics-molecule", version = "0.1.0", optional = true }
omics-variation = { path = "../omics-variation", version = "0.2.0", optional = true }

[features]
default = []

# Components
coordinate = ["dep:omics-coordinate"]
core = ["dep:omics-core"]
molecule = ["dep:omics-molecule"]
variation = ["dep:omics-variation"]

# Functionality
position-u64 = ["omics-coordinate/position-u64"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
