[package]
name = "profile"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
omics-coordinate = { path = "../omics-coordinate" }

clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
